feat: add support to generate the library documentation

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,5 +9,9 @@
     "moduleResolution": "node"
   },
   "include": ["src"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"],
+  "typedocOptions": {
+    "entryPoints": ["src/index.ts"],
+    "out": "dist-docs"
+  }
 }
