--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "check:lint": "npx eslint src/**/*.ts",
     "check:typescript": "npx tsc",
     "check:package": "npm pack --dry-run",
-    "check": "run-s check:prettier check:lint check:typescript check:package"
+    "check": "run-s check:prettier check:lint check:typescript check:package",
+    "predocs": "rm -rf dist-docs",
+    "docs": "npx typedoc",
+    "preservedocs": "run-s docs",
+    "servedocs": "npx serve dist-docs -l 3000"
   },
   "repository": {
     "type": "git",
@@ -37,6 +41,7 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^2.2.1",
     "prettier-eslint": "^12.0.0",
+    "typedoc": "^0.20.28",
     "typescript": "^4.1.5"
   }
 }
