--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "predocs": "rm -rf dist-docs",
     "docs": "npx typedoc",
     "preservedocs": "run-s docs",
-    "servedocs": "npx serve dist-docs -l 3000"
+    "servedocs": "npx serve dist-docs -l 3000",
+    "predeploydocs": "run-s docs",
+    "deploydocs": "npx gh-pages -d dist-docs"
   },
   "repository": {
     "type": "git",
@@ -38,6 +40,7 @@
     "@typescript-eslint/parser": "^4.15.2",
     "eslint": "^7.20.0",
     "eslint-config-prettier": "^8.0.0",
+    "gh-pages": "^3.1.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.2.1",
     "prettier-eslint": "^12.0.0",
