--- a/package.json
+++ b/package.json
@@ -8,17 +8,23 @@
     "**/*.ts"
   ],
   "scripts": {
+    "clean:docs": "npx rimraf dist-docs",
+    "clean:pack": "npx rimraf dist-pack",
+    "clean": "run-p clean:docs clean:pack",
     "check:prettier": "npx prettier -c src",
     "check:lint": "npx eslint src/**/*.ts",
     "check:typescript": "npx tsc",
     "check:package": "npm pack --dry-run",
     "check": "run-s check:prettier check:lint check:typescript",
-    "predocs": "rm -rf dist-docs",
+    "predocs": "run-s clean:docs",
     "docs": "npx typedoc",
     "preservedocs": "run-s docs",
     "servedocs": "npx serve dist-docs -l 3000",
     "predeploydocs": "run-s docs",
-    "deploydocs": "npx gh-pages -d dist-docs"
+    "deploydocs": "npx gh-pages -d dist-docs",
+    "copy:readme": "npx cpy 'README.md' 'dist-pack'",
+    "copy:src": "npx cpy '**/*.ts' '../dist-pack' --cwd=src --parents",
+    "copy": "run-p copy:readme copy:src"
   },
   "repository": {
     "type": "git",
@@ -38,12 +44,14 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.15.2",
     "@typescript-eslint/parser": "^4.15.2",
+    "cpy-cli": "^3.1.1",
     "eslint": "^7.20.0",
     "eslint-config-prettier": "^8.0.0",
     "gh-pages": "^3.1.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.2.1",
     "prettier-eslint": "^12.0.0",
+    "rimraf": "^3.0.2",
     "typedoc": "^0.20.28",
     "typescript": "^4.1.5"
   }
