--- a/package.json
+++ b/package.json
@@ -2,11 +2,6 @@
   "name": "@erkobridee/ts-definitions-common",
   "version": "0.2.0",
   "description": "common typescript definitions lib",
-  "main": "index.ts",
-  "types": "index.ts",
-  "files": [
-    "**/*.ts"
-  ],
   "scripts": {
     "clean:docs": "npx rimraf dist-docs",
     "clean:pack": "npx rimraf dist-pack",
@@ -24,7 +19,10 @@
     "deploydocs": "npx gh-pages -d dist-docs",
     "copy:readme": "npx cpy 'README.md' 'dist-pack'",
     "copy:src": "npx cpy '**/*.ts' '../dist-pack' --cwd=src --parents",
-    "copy": "run-p copy:readme copy:src"
+    "copy": "run-p copy:readme copy:src",
+    "build:package-json": "node scripts/dist-pack.js",
+    "prebuild": "run-s clean:pack",
+    "build": "run-p build:package-json copy"
   },
   "repository": {
     "type": "git",
@@ -47,6 +45,7 @@
     "cpy-cli": "^3.1.1",
     "eslint": "^7.20.0",
     "eslint-config-prettier": "^8.0.0",
+    "fs-extra": "^9.1.0",
     "gh-pages": "^3.1.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.2.1",
